--- a/application.yaml
+++ b/application.yaml
@@ -16,7 +16,7 @@ spec:
     namespace: myapp
 
   syncPolicy:
-    syncOptons:
+    syncOptions:
       - CreateNamespace=true
     automated:
       selfHeal: true
