--- a/prod/mongo.yaml
+++ b/prod/mongo.yaml
@@ -30,6 +30,13 @@ spec:
                 secretKeyRef:
                   name: mongo-secret
                   key: mongo-password
+          volumeMounts:
+            - mountPath: /data/db
+              name: volume
+      volumes:
+        - name: volume
+          persistentVolumeClaim:
+            claimName: volume-claim
 ---
 apiVersion: v1
 kind: Service
