--- a/argocd/prod.yaml
+++ b/argocd/prod.yaml
@@ -13,7 +13,7 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: webapp
+    namespace: prod
 
   syncPolicy:
     syncOptions:
