--- a/argocd/dev.yaml
+++ b/argocd/dev.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: dev-application
-  namespace: dev
+  namespace: argocd
 spec:
   project: default
 
