--- a/dev.yaml
+++ b/dev.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prod-application
+  name: prod
   namespace: argocd
 spec:
   project: default
@@ -13,7 +13,7 @@ spec:
 
   destination:
     server: https://kubernetes.default.svc
-    namespace: prod
+    namespace: argocd
 
   syncPolicy:
     syncOptions:
